# libigl-crochet-project

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.zed/: tasks.json
docs/: Notes.md  amigo_algo.md
src/: compute_g.cpp  compute_g.h  main.cpp  update.cpp  update.h
src/crochet/: compute_g.cpp  update.cpp  update.h
src/crochet_plot/: __init__.py  plot.py
