[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crochet-plot"
version = "0.1.0"
description = ""
authors = [
  { name = "Luc Chartier", email = "luc@sanative.ai" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.9.2",
  "pandas>=2.2.3"
]

[project.scripts]
plot = "crochet_plot.plot:main"

[tool.hatch.build.targets.sdist]
packages = ["src/crochet_plot"]

[tool.hatch.build.targets.wheel]
packages = ["src/crochet_plot"]

[tool.hatch.envs.default]
sources = ["src"]
